martian-derive/tests/ui_make_mro/attr_on_wrong_impl_trait.stderr
error: The attribute #[make_mro] should only be applied to `martian::MartianMain` or `martian::MartianStage` trait implementation of a stage struct. You are trying to use it on Foo trait implementation.
  --> $DIR/attr_on_wrong_impl_trait.rs:10:6
   |
10 | impl Foo for Stage {
   |      ^^^
